<resources>


    <string name="app_name">StuffNGo</string>
    <string name="act_produto">Detalhes: %1$s</string>
    <string name="act_senha">Deseja tirar senha para %1$s?</string>
    <string name="home">Home</string>
    <string name="qr">QR</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="tira_senha">Tira Senha Secção: %1$s</string>
    <string name="seccao_senhas">Senhas Digitais</string>
    <string name="carrinho_nav">carrinho</string>
    <string name="txt_LogScreen_SignIn">Sign In</string>
    <string name="txt_LogScreen_Username">Username</string>
    <string name="txt_LogScreen_Pwd">Password</string>
    <string name="txt_LogScreen_btn">Sign In</string>
    <string name="txt_LogScreen_ForgotPwd">Forgot Password?</string>
    <string name="txt_LogScreen_CreateAcc">Create Account</string>
    <string name="profile">Perfil</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="default_username">Username</string>
    <string name="default_email">teste@teste.pt</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="nome">Nome</string>
    <string name="nif">NIF</string>
    <string name="Tel">Tel</string>
    <string name="email">Email</string>
    <string name="moradas">Moradas</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="hist_encomendas">Encomendas</string>
    <string name="save">Guardar</string>
    <string name="Username">User</string>
    <string name="cancel">Cancelar</string>
    <string name="rua">Rua</string>
    <string name="codigo_postal">Cod. Postal</string>
    <string name="cidade">Cidade</string>
    <string name="pais">Pais</string>
    <string name="txtAddMorada">Adicionar Morada</string>
    <string name="txt_succ_edit">Morada editada com sucesso!</string>
    <string name="txt_delete">Apagar</string>
    <string name="txtDelete">Remover Morada</string>
    <string name="txtDeleteMsg">Tem a certeza que deseja remover esta morada?</string>
    <string name="txt_succ_add">Morada adicionada com sucesso!</string>
    <string name="txt_succ_delete">Morada apagada com sucesso!</string>
    <string name="txtNumEncomenda">Encomenda Nº:</string>
    <string name="txtEstado">Estado:</string>
    <string name="txtDataEncomenda">Data de Encomenda:</string>
    <string name="txtMorada">Morada:</string>
    <string name="Nome_Linha">Nome :</string>
    <string name="Qunatidade_Linha">Quantidade :</string>
    <string name="txt_remover_produto">Remover Produto</string>
    <string name="txt_remover_produto_question">Deseja remover o produto?</string>
    <string name="txt_sim">Sim</string>
    <string name="QUANTIDADE">quantidade</string>
    <string name="txt_erro">Falha ao tentar aceder ao servidor</string>
    <string name="txt_cupao_valido">Cupão adicionado com sucesso</string>
    <string name="txt_cupao_invalido">Cupão Inválido</string>
    <string name="txt_user_update">Utilizador editado com sucesso</string>
    <string name="txt_lojas">Escolha a loja onde quer fazer o levantamento</string>
    <string name="txt_no_moradas">Não tem moradas activas</string>
    <string name="txt_cupao">Introduza o código do cupão</string>
    <string name="txt_ok">Ok</string>
    <string name="txt_rua_error">Rua Invalida</string>
    <string name="txt_cidade_error">Cidade Inválida</string>
    <string name="txt_cod_postal_error">Código Postal Inválido</string>
    <string name="txt_pais_error">País Inválido</string>
    <string name="txt_fatura_saved">Fatura guardada!</string>
    <string name="txt_produto_rem">Produto removido</string>
    <string name="txt_produto_add">Produto adicionado</string>
    <string name="txt_cart_updated">Carrinho actualizado</string>
    <string name="txt_compra_concluida">Compra concluida com sucesso!</string>
    <string name="txt_empty_cart">A sua encomenda foi concluida com sucesso!</string>
    <string name="txt_sub_total">Sub-total:</string>
    <string name="txt_no_value">$0.00</string>
    <string name="txt_iva">Iva:</string>
    <string name="txt_desconto">Desconto:</string>
    <string name="txt_total">Total:</string>
    <string name="txt_checkout">Checkout</string>
    <string name="txt_linhas_da_encomenda">Linhas da Encomenda:</string>
    <string name="txt_no_name">Product Name</string>
    <string name="txt_no_description">Product Description</string>
    <string name="txt_cliente_atual">Cliente Atual :</string>
</resources>