<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.LoginFragment"
    android:background="@drawable/ic_layoutbg">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="371dp"
        android:layout_height="550dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="116dp"
        android:elevation="12dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edtext_bg"
                android:elevation="5dp"
                android:ems="10"
                android:hint="@string/txt_LogScreen_Pwd"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="@+id/etUname"
                app:layout_constraintStart_toStartOf="@+id/etUname"
                app:layout_constraintTop_toBottomOf="@+id/etUname" />

            <EditText
                android:id="@+id/etUname"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginTop="56dp"
                android:background="@drawable/edtext_bg"
                android:elevation="5dp"
                android:ems="10"
                android:hint="@string/txt_LogScreen_Username"
                android:paddingStart="15dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="176dp"
                android:text="@string/txt_LogScreen_SignIn"
                android:textColor="@color/yellow"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btLogin"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginBottom="56dp"
                android:background="@drawable/custom_btn"
                android:text="@string/txt_LogScreen_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/etPassword"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/etPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>