<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:tag="ProfileFragment"
    tools:context=".Views.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="15dp">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/default_profile_pic" />

        <TextView
            android:id="@+id/txtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/purple_500"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/purple_500" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_person"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/nome"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_nif"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/nif"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtNIF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_phone"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/Tel"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_email"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtMorada"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginLeft="-10dp"
            android:background="@drawable/bg_btn"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:text="@string/moradas"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            app:drawableLeftCompat="@drawable/ic_house" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPerfil"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginLeft="-10dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_btn"
            android:gravity="center"
            android:paddingStart="20dp"
            android:text="@string/editar_perfil"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            app:drawableLeftCompat="@drawable/ic_edit" />

        <TextView
            android:id="@+id/txtEncomendas"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginLeft="-10dp"
            android:background="@drawable/bg_btn"
            android:gravity="center"
            android:paddingStart="20dp"
            android:text="@string/hist_encomendas"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            app:drawableLeftCompat="@drawable/ic_encomendas" />

    </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>