<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ImageDetalhes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerInside" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvNomeDetalhes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:text="@string/txt_no_name"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_fav_n" />
        </LinearLayout>


        <TextView
            android:id="@+id/tvPrecoDetalhes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_no_value"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_no_description"
            android:textSize="16sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="60"
            android:gravity="center"
            android:paddingStart="50dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_minus"
                />

            <EditText
                android:id="@+id/etQuantidade"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="1"
                android:textAlignment="center"
                android:ems="10"
                android:inputType="number" />

            <ImageButton
                android:id="@+id/btPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_plus"
                />

        </LinearLayout>
        <ImageButton
            android:id="@+id/btCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_cart"
            />

    </LinearLayout>
    </LinearLayout>